# saturn

./: .env.example  .gitignore  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  SUPPORT.md  docker-compose.yml  package-lock.json  package.json  vercel.json
.github/: dependabot.yml  pull_request_template.md  release.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
apps/openclaw-saturn-plugin/: README.md  index.js  openclaw.config.example.yaml  openclaw.plugin.json  package.json
apps/website/: index.html  package.json  vite.config.js
apps/website/.vercel.bizais.backup/: project.json
apps/website/docs/: index.html
apps/website/src/: App.svelte  DocsPage.svelte  docs-main.js  main.js  site.css
docs/: README.md  SUMMARY.md  architecture.md  nostr-events.md  protocol-spec.md
docs/examples/: capability-event.json  payment-receipt-event.json  quote-reference-event.json  status-update-event.json
migrations/: 0001_init.sql
src/: errors.rs  lib.rs  main.rs
src/api/: handlers.rs  schemas.rs
src/app/: config.rs  mod.rs
src/client/: mod.rs
src/domain/: entities.rs  mod.rs  state_machine.rs
src/nostr/: mod.rs
src/payments/: mod.rs
src/persistence/: mod.rs
src/privacy/: mod.rs
src/security/: canonical.rs  middleware.rs  mod.rs  signing.rs
src/services/: mod.rs
tests/: client_integration.rs  happy_path.rs  ldk_regtest.rs
tests/common/: mod.rs
