[package]
name = "a2a-commerce-protocol"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "A2A Commerce Protocol v0.1 reference implementation for BTC-only agent commerce over Axum and Nostr."
repository = "https://example.com/a2a-commerce-protocol"

[lib]
name = "a2a_commerce_protocol"
path = "src/lib.rs"

[[bin]]
name = "a2a-commerce-server"
path = "src/main.rs"

[dependencies]
async-trait = "0.1.89"
axum = { version = "0.8.8", features = ["macros"] }
chrono = { version = "0.4.42", features = ["serde"] }
dotenvy = "0.15.7"
hex = "0.4.3"
http = "1.3.1"
http-body-util = "0.1.3"
jsonschema = "0.44.1"
schemars = { version = "1.1.0", features = ["chrono04", "uuid1"] }
secp256k1 = { version = "0.31.1", features = ["hashes", "rand", "serde", "recovery"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json", "migrate", "macros"] }
thiserror = "2.0.18"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "signal"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors", "request-id", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt", "json"] }
url = { version = "2.5.7", features = ["serde"] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }
validator = { version = "0.20.0", features = ["derive"] }

[dev-dependencies]
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
tower = { version = "0.5.2", features = ["util"] }
